--- a/index.html
+++ b/index.html
@@ -6,12 +6,32 @@
         <title>Excursion</title>
         <meta name="description" content="Excursion app demo">
         <meta name="viewport" content="width=device-width, initial-scale=1">
-        <link rel="stylesheet" href="./style.css">
+        <link rel="stylesheet" href="resources/css/style.css">
     </head>
     <body>
       <header>
         <h1>Discover hidden places in the world around you</h1>
         <a href="#"> Download Excursion (coming soon!)</a>
       </header>
+      <main>
+        <div class="video">
+            <video autoplay loop>
+                <source src="resources/videos/excursion.mp4" type="video/mp4">
+            </video>
+        </div>
+        <h2>Your personal travel guide</h2>
+        <p>Excursion remembers places you like, and recommends new points of interest around you.</p>
+        <div class="main-image">
+            <img src="resources/images/camp.jpg" alt="tent in a desert">
+        </div>
+      </main>
+      <footer>
+          <div class="cell-icon">
+              <img src="resources/images/phone.png">
+          </div>
+          <h2>Coming Soon for iPhone and Android</h2>
+          <a href="#">Download Excursion (Coming soon!)</a>
+          <p>&#169 Excursion</p>
+      </footer>
     </body>
     </html>
